stylin up header

--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
 /* The BOX MODEL is what describes the amount of space each element takes up on the page. */
+header {
+    background-color: rgb(38, 184, 184);
+    color: ghostwhite;
+    padding: 20px;
+}
