went negative in margin to make flush with vp

--- a/style.css
+++ b/style.css
@@ -6,4 +6,6 @@ header {
     padding: 15px 20px;
     border: solid 12px slategray;
     border-radius: 12%;
+    border-bottom-color: aqua;
+    margin: 0px -10px;
 }
