--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ header {
     border: solid 12px slategray;
     border-radius: 12%;
     border-bottom-color: aqua;
-    margin: 0px -10px;
+    /* margin: 0px -10px; */
 }
