--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ header {
     border: solid 12px slategray;
     border-radius: 12%;
     border-bottom-color: aqua;
+    font-size: 1.5rem;
+    text-align: center;
     /* margin: 0px -10px; */
 }
 body {
@@ -16,8 +18,11 @@ main {
     margin: 8px;
 }
 footer {
-    width: 170px;
+    width: 200px;
     padding: 5px 8px;
     border: 2px solid purple;
-    margin: 30px 2px 15px;
+    margin: 30px auto 15px;
+    color: orange;
+    font-size: .8rem;
+    text-align: center;
 }
