Playing with max width now

--- a/style.css
+++ b/style.css
@@ -21,12 +21,14 @@ main {
     margin: 8px;
 }
 aside img {
-    width: 600px;
+    width: 100%;
+    max-width: 600px;
 }
 #bio {
-    width: 600px;
+    width: 100%;
+    max-width: 600px;
     padding: 10px 15px;
-    border: black 3px solid;
+    border: slategrey 3px solid;
     background-color: aqua;
 }
 footer {
