--- a/style.css
+++ b/style.css
@@ -24,10 +24,13 @@ aside img, #bio {
     width: 100%;
     max-width: 500px;
 }
+.hide {
+    display: inline-block;
+}
 section {
     min-height: 100vh;
     padding: 1rem;
-    border-bottom: 2px dotted #777;
+    border-bottom: 2px solid #777;
     background-color: azure;
 }
 #bio {
