--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ figcaption {
     width: 100%;
     bottom: 20px;
     background-color: yellow;
+    text-align: center;
 }
 ul li {
     display: inline;
