--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 header {
     position: fixed;
+    z-index: 2;
     width: 100%;
     top: 0;
     background-color: rgb(38, 184, 184);
@@ -29,6 +30,7 @@ main {
 }
 #interesting-banner {
     position: sticky;
+    z-index: 3;
     width: 100%;
     top: 0;
     padding: 10px 15px;
@@ -44,6 +46,7 @@ aside img, figure, #bio {
 }
 figure {
     position: relative;
+    z-index: 1;
     margin:0;
 }
 figcaption {
