applied google fonts to the page

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ article {
     margin-top: 4rem;;
 }
 body {
-    font-family: "Gotham Rounded", Verdana;
+    font-family: 'Kanit', sans-serif;
     margin: 0;
 }
 main {
