inserted new pic for styling and changed id name to match

--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ main {
     font-weight: bold;
     text-align: center;
 }
-#ed-pic-test {
-    background: url('ed.jpg') bottom no-repeat;
+#spike-pic-test {
+    background: url('spike.jpeg') bottom no-repeat;
 }
 aside img, figure, #bio {
     width: 100%;
